Scrollbar Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2115,6 +2115,7 @@ a.mobile-menu-opener {
     a.mobile-menu-opener {
       display: block; } }
 
+.mCSB_2_scrollbar,
 .mCSB_6_scrollbar,
 .mCSB_7_scrollbar,
 .mCSB_8_scrollbar,
